--- a/package.html
+++ b/package.html
@@ -23,6 +23,138 @@
     max-width: 100vw;
     overflow-x: hidden;
 }
+body {
+    font-family: 'Sarabun', sans-serif;
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
+.container, .container-fluid {
+    max-width: 100%;
+    padding: 15px;
+}
+
+/* ป้องกันการขยาย-ย่อโดยไม่ได้ตั้งใจ */
+html, body {
+    touch-action: manipulation;
+}
+
+/* ปรับ Navbar ให้อยู่ตรงกลางและขยายเต็มจอเมื่ออยู่บนมือถือ */
+.nav-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff;
+    padding: 10px;
+}
+
+.navbar-toggler {
+    border: none;
+    background-color: transparent;
+    margin-left: auto;
+}
+
+.navbar-collapse {
+    text-align: center;
+    width: 100%;
+}
+
+.nav-pills .nav-link {
+    width: 100%;
+}
+
+/* ปรับขนาด modal ให้เหมาะสมกับมือถือ */
+.modal-dialog {
+    max-width: 90%;
+    margin: auto;
+}
+
+.modal-content {
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+/* ปรับขนาดรูปภาพให้เหมาะสมกับหน้าจอ */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* ปรับ layout ของ card ให้เหมาะสมกับมือถือ */
+.col {
+    max-width: 100%;
+    min-width: auto;
+    margin-bottom: 10px;
+}
+
+.card-body {
+    min-height: auto;
+    background-color: lightblue;
+}
+
+/* ปรับ container-sm ให้เหมาะสมกับหน้าจอมือถือ */
+.container-sm {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* ปรับขนาด text-footer ให้เล็กลงเมื่ออยู่บนมือถือ */
+.text-footer {
+    font-size: 0.80rem;
+    text-align: center;
+    color: darkgreen;
+}
+
+/* ปรับการแสดงผลของ package-container บนมือถือ */
+.package-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+    min-height: auto;
+    background-color: #2e7d32;
+    padding: 10px;
+}
+
+.product {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+}
+
+.product-img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+/* Media Queries สำหรับหน้าจอมือถือ */
+@media (max-width: 768px) {
+    .nav-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-pills {
+        width: 100%;
+    }
+
+    .card-body {
+        max-height: 200px;
+    }
+
+    .modal {
+        width: 100%;
+        max-width: 90%;
+        margin: auto;
+    }
+}
+
+        
         container, .container-sm, .container-lg {
     max-width: 100%;
 }
