--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                         <div class="ms-4">
                             <p class="mb-2">ที่ตั้งออฟฟิศ</p>
                             <h5 class="mb-0">เลขที่ 67/19 ต. หนองปลาหมอ</h5>
-                            <5 class="mb-0">อ. หนองแค จ.สระบุรี 18140</5>
+                            <้้h5 class="mb-0">อ. หนองแค จ.สระบุรี 18140</h5>
                         </div>
                     </div>
                 </div>
@@ -113,17 +113,14 @@
                             <i class="fa fa-phone-alt text-primary"></i>
                         </div>
                         <div class="ms-4">
-                            <p class="mb-2">สนใจตรวจสุขภาพ</p>
+                            <p class="mb-2">สนใจตรวจสุขภาพโทรหาเรา</p>
                             <h5 class="mb-0">098-920-2270 K.บิ๊ก</h5>
                             <h5 class="mb-0">092-636-8867 K.รุ้ง</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="h-100 bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white" style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open text-primary"></i>
-                        </div>
+                   
                         <div class="ms-4">
                             <p class="mb-2">Mail Us Now</p>
                             <h5 class="mb-0">mitrpracha.rbmb@gmail.com</h5>
