--- a/price.html
+++ b/price.html
@@ -121,7 +121,7 @@
         }
 
         .tablehead {
-            font-size: 1.75rem;
+            font-size: 2rem;
             margin-left: 50px;
 
 
@@ -202,7 +202,7 @@
     </style>
     <div class="container-fluid mt-5">
         <div class="tablehead mt-5 fw-bold " style="font-family: sarabun; color: darkgreen;">อัตราการให้บริการ</div>
-        <div class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</div>
+        <div class="tabledetail mt-5 mb-3 " style="font-family: sarabun; color: darkgreen;">รายการตรวจสุขภาพทั่วไป</div>
     </div>
     <div class="container-sm">
         <table class="custom-table mb-5">
@@ -223,7 +223,7 @@
     </div>
 
       <div class="container-fluid">
-        <div class="tabledetail mt-5 " style="font-family: sarabun; color: darkgreen;">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</div>
+        <div class="tabledetail mt-5 mb-3 " style="font-family: sarabun; color: darkgreen;">รายการตรวจวิเคราะห์สารเคมีทางชีวภาพ(Toxico)</div>
       </div>
     <div class="container-sm">
         <table class="custom-table mb-5">
